--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+:root {
+  --font: 'Montserrat', sans-serif;
+  --branco: #fff;
+  --preto: #000;
+  --cinza: #e2e2e2
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font);
+  background-color: var(--branco);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
